# quads

./: .coveragerc  .env.example  .gitignore  .gitreview  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  alert-expiration.sh  autoapp.py  create-input-assignments.sh  create-input.sh  date-range-generate.py  dev_tests.sh  echo_workspace.sh  find-available.py  find-available.sh  groups  ical-generate.sh  make-instackenv-json.sh  project.config  quads.README  racks-wiki.py  regenerate-wiki.sh  requirements.txt  sample.py  schedule.py  setup.cfg  setup.py  test.txt  testing.txt  tox.ini  update-racks-page.md  wiki.py
ansible/: README.md  idrac_interfaces.yml  ipmi_credentials.yml  racadm-setup-boot-1028r-director.yml  racadm-setup-boot-1028r-foreman.yml  racadm-setup-boot-1029u-foreman.yml  racadm-setup-boot-6018r-director.yml  racadm-setup-boot-6048r-director.yml  racadm-setup-boot-6048r-foreman.yml  racadm-setup-boot-r620-director.yml  racadm-setup-boot-r620-foreman.yml  racadm-setup-boot-r630-director.yml  racadm-setup-boot-r630-foreman.yml  racadm-setup-boot-r720xd-director.yml  racadm-setup-boot-r720xd-foreman.yml  racadm-setup-boot-r730xd-director.yml  racadm-setup-boot-r730xd-foreman.yml  racadm-setup-boot-r930-director.yml  racadm-setup-boot-r930-foreman.yml
conf/: hosts.yml  hosts_metadata.yml  idrac_interfaces.yml  logrotate_quads.conf  openstack.conf  quads.yml  selfservice.yml  vlans.yml
container/: Containerfile  container-compose.yml
cron/: quads
docker/: Dockerfile  docker-compose-osx.yml  docker-compose-production.yml  docker-compose.yml
lib/: Apc.py  (+17 more)
(+620 files in other folders)
