[metadata]
name = quads
description = QUADS automates the future scheduling, end-to-end provisioning and delivery of bare-metal servers and networks.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
platforms = any
url = https://github.com/redhat-performance/quads
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
keywords = oob, management
project_urls =
    Bug Tracker = https://github.com/redhat-performance/quads/issues
    Documentation = https://github.com/redhat-performance/quads/blob/master/README.md
    Source Code = https://github.com/redhat-performance/quads

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pyyaml>=3.10
    setuptools>=39.0
zip_safe = True

[options.packages.find]
where = src
exclude =
    server*

[options.package_data]
quads =
    templates/*
    web/templates/*
    web/static/css/*
    web/static/js/*

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[options.entry_points]
console_scripts =
    quads = quads.cli.main:main
